--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Amr Ashraf"
+title                    : "Aziz Farghly"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Amr Ashraf"
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Amr Ashraf"
+  name             : "Aziz Farghly"
   avatar           : /assets/images/site_data/avatar.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Computer engineer interested in reverse engineering, forensics and malware analysis "
   location         : "Egypt"
@@ -104,19 +104,19 @@ author:
      # url: "https://amr-git-dot.github.io/aboutme/"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:amr.ashraf.re@outlook.com"
+      url: "farghly.mahmod66@outlook.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/Cyberagent101"
+      url: "https://twitter.com/FarghlyMal"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       url: "https://www.facebook.com/profile.php?id=100076430379156&mibextid=ZbWKwL"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/amr-ashraf-93bb9a1ba/"
+      url: "https://www.linkedin.com/in/aziz-farghly-9133501a4"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/amr-git-dot"
+      url: "https://github.com/FarghlyMal"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -126,7 +126,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/Cyberagent101"
+      url: "https://twitter.com/FarghlyMal"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
