--- a/_config.yml
+++ b/_config.yml
@@ -108,9 +108,9 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/FarghlyMal"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      url: "https://www.facebook.com/profile.php?id=100076430379156&mibextid=ZbWKwL"
+    - #label: "Facebook"
+      #icon: "fab fa-fw fa-facebook-square"
+      #url: "https://www.facebook.com/profile.php?id=100076430379156&mibextid=ZbWKwL"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/aziz-farghly-9133501a4"
