--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,14 +2,14 @@
 main:
   - title: "Malware Analysis"
     url: /categories/#malware-analysis
-  - title: "Forensic investigation"
-    url: /categories/#forensic-investigation
+  - #title: "Forensic investigation"
+    #url: /categories/#forensic-investigation
   #- title: "Mal-Docs"
    # url: /categories/#mal-docs
-  - title: "Offensive"
-    url: /categories/#offensive
-  - title: "CTF"
-    url: /categories/#ctf
+  - #title: "Offensive"
+    #url: /categories/#offensive
+  - #title: "CTF"
+    #url: /categories/#ctf
   - title: "All Categories"
     url: /categories
   
