--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   name             : "Farghly Mal"
   avatar           : /assets/images/site_data/avatar.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I'm Aziz Farghly ,I am interested in Malwares and learning lowlevel "
-  location         : "Egypt"
+  location         : "where ever u go"
   email            : 
   links:
     - label: "About Me"
