--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ social:
 analytics:
   provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-207369386-2"
+    tracking_id          : "G-ZXNQ4L7VBV"
     anonymize_ip         : # true, false (default)
 
 
