--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : "G-ZXNQ4L7VBV"
     anonymize_ip         : # true, false (default)
