--- a/_config.yml
+++ b/_config.yml
@@ -85,9 +85,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
+  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "G-ZXNQ4L7VBV"
+    tracking_id          : "UA-207369386-2"
     anonymize_ip         : # true, false (default)
 
 
