--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
      # url: "https://cyber-anubis.github.io/aboutme/"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:farghly.mahmod66@outlook.com"
+      url: "mailto:farghly.mahmod66@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/farghlymal"
