--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,9 @@
 # Theme Settings
 #
 # Review documentation to determine if you should use `theme` or `remote_theme`
-# https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
+# https://
+mmistakes.github.io
+/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
  #theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes"
@@ -16,27 +18,36 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "FarghlyMal"
+title                    : "Aziz Farghly"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 #name                     : "Aziz Farghly"
-description              : "Malware Analysis RE"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "Threat Researcher with passion for Malware Analysis"
+url                      : # the base hostname & protocol for your site e.g. "https://
+mmistakes.github.io
+"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : /assets/images/site_data/avatar.jpg # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : /assets/images/site_data/Avatar.jpg # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 210
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : # https://
+help.disqus.com
+/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
-    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+    server               : # https://
+meta.discourse.org
+/t/embedding-discourse-comments-via-javascript/31963 , e.g.: 
+meta.discourse.org
   facebook:
-    # https://developers.facebook.com/docs/plugins/comments
+    # https://
+developers.facebook.com
+/docs/plugins/comments
     appid                :
     num_posts            : # 5 (default)
     colorscheme          : # "light" (default), "dark"
@@ -77,7 +88,8 @@ facebook:
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
-# - https://developers.google.com/structured-data/customize/social-profiles
+# - 
+https://developers.google.com/structured-data/customize/social-profiles
 social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
@@ -94,39 +106,53 @@ analytics:
 # Site Author
 author:
   name             : "Aziz Farghly"
-  avatar           : /assets/images/site_data/avatar.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/site_data/Avatar.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Malware Reverse Engineer"
   location         : "where ever u go ?!"
   email            :
   links:
     - label: "About Me"
       icon: "fas fa-fw fa-link"
-     # url: "https://cyber-anubis.github.io/aboutme/"
+     # url: "
+https://cyber-anubis.github.io/aboutme/
+"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:farghly.mahmod66@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/farghlymal"
+      url: "
+https://twitter.com/farghlymal
+"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      # url: "
+https://facebook.com/
+"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/aziz-farghly/"
+      url: "
+https://www.linkedin.com/in/aziz-farghly/
+"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/FarghlyMal"
+      url: "
+https://github.com/FarghlyMal
+"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      # url: "
+https://instagram.com/
+"
 
 # Site Footer
 footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-       #url: "https://twitter.com/cyber_anubis"
+       #url: "
+https://twitter.com/cyber_anubis
+"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
