--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,9 @@
 # Theme Settings
 #
 # Review documentation to determine if you should use `theme` or `remote_theme`
-# https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
+# https://
+mmistakes.github.io
+/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
  #theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes"
@@ -21,22 +23,31 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 #name                     : "Aziz Farghly"
 description              : "Threat Researcher with passion for Malware Analysis"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : # the base hostname & protocol for your site e.g. "https://
+mmistakes.github.io
+"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : /assets/images/site_data/Avatar.jpg # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : /assets/images/site_data/_961357ed-fa0f-4e56-8fbe-c6c36c32f3cb.ico  # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 190
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : # https://
+help.disqus.com
+/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
-    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+    server               : # https://
+meta.discourse.org
+/t/embedding-discourse-comments-via-javascript/31963 , e.g.: 
+meta.discourse.org
   facebook:
-    # https://developers.facebook.com/docs/plugins/comments
+    # https://
+developers.facebook.com
+/docs/plugins/comments
     appid                :
     num_posts            : # 5 (default)
     colorscheme          : # "light" (default), "dark"
