--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : # the base hostname & protocol for your site e.g. "ht
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : /assets/images/site_data/_961357ed-fa0f-4e56-8fbe-c6c36c32f3cb.ico  # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : /assets/images/site_data/_961357ed-fa0f-4e56-8fbe-c6c36c32f3cb_processed.png  # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 190
@@ -93,7 +93,7 @@ analytics:
 # Site Author
 author:
   name             : "Aziz Farghly"
-  avatar           : /assets/images/site_data/Avatar.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/site_data/_961357ed-fa0f-4e56-8fbe-c6c36c32f3cb_processed.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Malware Reverse Engineer"
   location         : "where ever u go ?!"
   email            :
